Better buttons and save on enter (shift to avoid)

--- a/client/src/styles/simple.css
+++ b/client/src/styles/simple.css
@@ -100,12 +100,13 @@ button {
 
 .buttons {
   width: 100%;
+  display: flex;
 }
 
 .buttons button {
   margin-left: auto;
   margin-right: auto;
-  display: block;
+  display: inline-block;
   padding:  10px 40px;
 }
 
